# MagMAP

./: .gitignore  README.md  conda_recipe_oft.yml  setup.cfg
magmap/data/: prep.py
magmap/data/download/: drms_helpers.py  euv_utils.py  image_download.py  lmsal_helpers.py  vso_helpers.py
magmap/database/: db_funs.py
magmap/examples/: Download_HMI.py  Download_Map_HMI.py  HMI_M_movie.py  Map_HMI_dir.py  Plot_fits.py
magmap/examples/dev/: Map_HMI_AFT.py  Map_HMI_dir_900x900.py  Map_HMI_dir_debug.py
magmap/maps/: image2map.py  midm.py
magmap/maps/devel/: Map_HMI_dir_ron.py  Plot_test_interp.py  compare_psi-m720s_hmi-Mrmap720s.py  compare_psimap-to-mrmap_bytimestamp.py  experiments_compare_psimap-to-mrmap.py  interp_test.py  proto_hipft_map.py  reproject_test.py
magmap/maps/scripts/: Update_Map_HMI.py
magmap/maps/util/: map_manip.py
magmap/scripts/: Update_Map_HMI.py  Update_local_HMI.py
magmap/scripts/dev/: Download_HMI_Mrmap.py  Download_HMI_Mrmap_update.py  HMI_Mrmap_update_movie.py  Map_HMI_dir_900x900.py  Ron_TESS_examples.py
magmap/settings/: info.py
magmap/utilities/: coord_manip.py
magmap/utilities/datatypes/: datatypes.py
oft/database/: db_funs.py
oft/maps/: image2map.py  midm.py
oft/utilities/: coord_manip.py
oftpy/data/: prep.py
oftpy/database/: db_funs.py
oftpy/examples/: Download_HMI.py  Download_HMI_Mrmap.py  Download_Map_HMI.py  HMI_M_movie.py  Map_HMI_dir.py  Map_HMI_dir_900x900.py  Plot_fits.py
oftpy/maps/: hipft_prep.py  image2map.py  midm.py
oftpy/utilities/: coord_manip.py
rsrc/: conda_recipe_magmap.yml
(+61 files in other folders)
