[metadata]
name = magmap
version = 0.1.0
author = James Turtle, Cooper Downs, and Ronald M. Caplan
author_email = jamie@predsci.com
description = MagMAP:  Magnetic mapping and processing.  Part of OFT.
; url = https://github.com/predsci/magmap
; license_file = LICENSE
; long_description = file: docs/README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3.8
	Operating System :: OS Independent
	License :: OSI Approved :: Apache Software License
license = Apache License Version 2.0

[options]
include_package_data = True
packages = find:

#[options.entry_points]
#console_scripts =
#    psiweb = psiweb.cli.main:entry

